# yandex-alice-openai

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: alice-request.json  alice-response.json
scripts/: dev_tunnel.sh
src/alice_openai_backend/: __init__.py  config.py  main.py
src/alice_openai_backend/api/: deps.py
src/alice_openai_backend/api/routes/: alice.py
src/alice_openai_backend/application/: bootstrap.py
src/alice_openai_backend/domain/: models.py  ports.py
src/alice_openai_backend/infra/db/: analytics.py  models.py  session.py
src/alice_openai_backend/infra/llm/: openai_adapter.py
src/alice_openai_backend/infra/observability/: metrics.py  request_id.py  tracing.py
src/alice_openai_backend/infra/queue/: __init__.py  redis_streams.py
src/alice_openai_backend/infra/redis/: __init__.py  client.py  stores.py
src/alice_openai_backend/infra/security/: rate_limit.py
src/alice_openai_backend/services/: conversation.py  identity.py  prompting.py  renderer.py
src/alice_openai_backend/workers/: deferred_worker.py
src/yandex_alice_openai/: config.py  main.py
src/yandex_alice_openai/api/: deps.py
src/yandex_alice_openai/api/routes/: alice.py  health.py
src/yandex_alice_openai/application/: bootstrap.py
src/yandex_alice_openai/domain/: ports.py
src/yandex_alice_openai/infra/db/: analytics.py  models.py  session.py
src/yandex_alice_openai/infra/llm/: openai_adapter.py
src/yandex_alice_openai/infra/observability/: logging.py  request_id.py
src/yandex_alice_openai/infra/queue/: redis_streams.py
src/yandex_alice_openai/infra/redis/: client.py  stores.py
src/yandex_alice_openai/infra/security/: rate_limit.py
src/yandex_alice_openai/schemas/: alice.py
src/yandex_alice_openai/services/: conversation.py  identity.py  prompting.py  renderer.py
src/yandex_alice_openai/workers/: deferred_worker.py
tests/: conftest.py  test_conversation_service.py  test_deferred_worker.py  test_openai_adapter.py  test_prompting.py  test_renderer.py  test_webhook_route.py
