[project]
name = "yandex-alice-openai"
version = "0.1.0"
description = "FastAPI backend for a Yandex Alice skill that uses the OpenAI Responses API, keeps short-term dialog state in Redis, stores analytics in PostgreSQL, and falls back to deferred replies when Yandex Alice's response deadline is too tight."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ruslan Khasanshin" }]
maintainers = [{ name = "Ruslan Khasanshin" }]

dependencies = [
  "asyncpg>=0.31.0",
  "fastapi>=0.136.0",
  "httpx>=0.28.1",
  "openai>=2.32.0",
  "pydantic>=2.13.1",
  "pydantic-settings>=2.11.0",
  "redis[hiredis]>=7.4.0",
  "sqlalchemy[asyncio]>=2.0.49",
  "structlog>=25.4.0",
  "tenacity>=9.1.2",
  "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "prek>=0.3.9",
  "pysentry-rs>=0.4.5",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.11",
  "ty>=0.0.31",
  "types-redis>=4.6.0.20241004",
]

[project.scripts]
yandex-alice-openai-api = "yandex_alice_openai.main:run"
yandex-alice-openai-worker = "yandex_alice_openai.workers.deferred_worker:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yandex_alice_openai"]

[tool.uv]
default-groups = ["dev"]
link-mode = "copy"

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = [".venv"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
  "ARG",
  "PL",
  "RUF",
  "C4",
  "FA",
  "N",
  "PERF",
  "W",
]
extend-ignore = ["B008", "RUF001"]

[tool.ruff.lint.isort]
known-first-party = ["yandex_alice_openai"]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"src/yandex_alice_openai/domain/ports.py" = ["PLR0913"]
"src/yandex_alice_openai/infra/redis/stores.py" = ["PLR0913"]
"src/yandex_alice_openai/services/conversation.py" = ["PLR0911", "PLR0913"]
"tests/conftest.py" = ["PLR0913"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[tool.pysentry.defaults]
fail_on = "low"

[tool.pysentry.sources]
enabled = ["pypa", "pypi", "osv"]

[tool.bandit.assert_used]
skips = ["*_test.py", "*test_*.py"]
